[package]
name = "java-rs-pacific"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
byteorder = "1.3.4"
java-rs-derive = { path = "../java-rs-derive" }
java-rs-base = { path = "../java-rs-base" }
bitflags = "1.2.1"

[dev-dependencies]
temp_testdir = "0.2.3"
walkdir = "2.3.2"
